Change the header to avoid the extra padding

--- a/_src/scss/02-layout/_header.scss
+++ b/_src/scss/02-layout/_header.scss
@@ -4,13 +4,14 @@
 .masthead {
   // Positioning and sizing
   height: $header-height-phone;
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
   z-index: 10;
 
   // Background and borders
   background-color: $background-color;
+
   @include mq(laptop) {
     height: $header-height;
     background-color: $header-background;
